--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,9 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/financial_organization
-spring.datasource.username=postgres
-spring.datasource.password=Chico@.3009
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
+
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
-#api.security.token.secret=${JWT_SECRET:my-secret-key}
+api.security.token.secret=${JWT_SECRET:my-secret-key}
