--- a/src/main/resources/application-docker.properties
+++ b/src/main/resources/application-docker.properties
@@ -1,7 +1,7 @@
 spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://db:5432/financial_organization}
 spring.datasource.username=${DB_USERNAME:financial_user}
 spring.datasource.password=${DB_PASSWORD:financial_password}
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=false
 api.security.token.secret=${JWT_SECRET:my-secret-key}
